--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-leaflet": "^2.7.0",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "serialize-javascript": "^4.0.0"
   },
   "scripts": {
